<resources>
    <string name="app_name">Rockets</string>
    <string name="editor">Editor</string>
    <string name="cashier">Cashier</string>
    <string name="admin">Admin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="login_mobile">Enter Mobile No.</string>
    <string name="btn_login">Login</string>
    <string name="btn_continue">Continue</string>
    <string name="show_trans">Filter Transactions</string>
    <string name="btn_clear1">Clear</string>
    <string name="btn_clear">C</string>
    <string name="login_invalid_num">Enter a valid Number</string>
    <string name="login_invalid_country_code">Invalid Country Code</string>
    <string name="enter_all">Enter all Fields</string>
    <string name="no_internet">Please connect to working Internet connection</string>
    <string name="validation_msg">Validation Sms from </string>
    <string name="validation_success">Validation Success</string>
    <string name="validation_failed">Validation Failed</string>
    <string name="profile_update_success">Profile Updated</string>
    <string name="profile_update_failed">Profile not updated</string>
    <string name="profile_fetch_error">Error in Fetching Profile Details</string>
    <string name="rocket_id">Rocket Id</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="game_type">Game Type</string>
    <string name="select_member_type">Select Member Type</string>
    <string name="member_id">Member Id</string>
    <string name="member_name">Name</string>
    <string name="member_phone">Phone No</string>
    <string name="nick_name">Nick Name</string>
    <string name="gender">Gender</string>
    <string name="profile">Profile</string>
    <string name="dob">Date Of Birth</string>
    <string name="save">Save</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="invalid_otp">Incorrect OTP</string>
    <string name="invalid_email">Incorrect Email</string>
    <string name="select">Select</string>
    <string name="req_sent">Friend Request Sent</string>
    <string name="req_not_sent">Unable to send Friend Request</string>
    <string name="send_req">Send Request</string>
    <string name="below_age">You are below 18</string>
    <string name="frnd_req_rec">&#160; has sent you a friend request</string>
    <string name="frnd_req_accept">&#160; accepted your friend request</string>
    <string name="empty_frnd_req">You have 0 Friend Request</string>
    <string name="empty_service">No Services</string>
    <string name="empty_update">No New Updates!!!!</string>
    <string name="empty_events">0 Events to Display! </string>
    <string name="skip">Skip >></string>
    <string name="app_unavailable">WhatsApp and Facebook are not available</string>
    <string-array name="member_list">
        <item><string name="set_normal">Normal User</string></item>
        <item><string name="set_editor">Editor</string></item>
        <item><string name="set_cashier">Cashier</string></item>
        <item><string name="set_admin">Admin</string></item>
    </string-array>
    <string-array name="super_admin_list">
        <item><string name="set_normal1">Normal User</string></item>
        <item><string name="set_editor1">Editor</string></item>
        <item><string name="set_cashier1">Cashier</string></item>
        <item><string name="set_admin1">Admin</string></item>
        <item><string name="set_super_admin1">Super Admin</string></item>
    </string-array>
    <string-array name="gender_list">
        <item><string name="male">Male</string></item>
        <item><string name="female">Female</string></item>
    </string-array>
    <string-array name="trans_type_list">
        <item><string name="cash_in">Cash In</string></item>
        <item><string name="cash_out">Cash Out</string></item>
        <item><string name="credit_taken">Credit Taken</string></item>
        <item><string name="credit_return">Credit Returned</string></item>
        <item><string name="bonus">Add Bonus</string></item>
        <item><string name="bonus_redeem">Redeem Bonus</string></item>
    </string-array>
    <string-array name="pay_type_cash_in">
        <item><string name="type_in_cash">Cash</string></item>
        <item><string name="type_in_card">Card</string></item>
    </string-array>
    <string-array name="pay_type_cash_out">
        <item><string name="type_out_cash">Cash</string></item>
        <item><string name="type_out_online">Online</string></item>
    </string-array>
    <string-array name="game_list">
        <item><string name="game1">Texas Hold Em</string></item>
        <item><string name="game2">Omaha</string></item>
        <item><string name="game3">7-Card Stud</string></item>
        <item><string name="game4">5-Card Draw</string></item>
        <item><string name="game5">High / Low Chicago</string></item>
        <item><string name="game6">Follow the Queen</string></item>
    </string-array>
    <string-array name="live_update_list">
        <item><string name="update2">Current running game</string></item>
        <item><string name="update3">Yet to start</string></item>
    </string-array>
    <string name="enter_first_3">Enter first 3 fields</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="otp_info">Automatically fetches OTP.\nPlease wait.</string>
    <string name="otp_info1">Automatically fetches OTP in %1$s minutes.\nPlease wait.</string>
    <string name="msg_settings">Note : Check your message settings if you are not receiving an OTP message</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="pls_try_later">Please try later</string>
    <string name="settings_title">SETTINGS</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_chat">Chat Notification</string>
    <string name="update_header">Enter Header</string>
    <string name="update_text">Enter text</string>
    <string name="limit">Enter Amount</string>
    <string name="update_comments">Enter some comments</string>
    <string name="game_name">Enter Game Name</string>
    <string name="game_found">Game already added</string>
    <string name="unable_to_connect_server">Unable to Connect to Server</string>
    <string name="content_description">Image</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_new_friend">Add New Friend</string>
    <string name="add_friend">Add Friend</string>
    <string name="invite_to_play">Invite To Play</string>
    <string name="search">Search</string>
    <string name="graph">Graph</string>
    <string name="search_friends">Search Friends</string>
    <string name="search_members">Search Members</string>
    <string name="list_friends">Game Members</string>
    <string name="set_game_time">Set Game Time</string>
    <string name="search_with_mob">Search with Mobile Number</string>
    <string name="search_member_num_id">Search with Mobile or Rocket Id</string>
    <string name="description">Description</string>
    <string name="go_search">Go</string>
    <string name="btn_search">SEARCH</string>
    <string name="friend_not_found">Unable to find the number</string>
    <string name="member_not_found">Unable to find the member</string>
    <string name="add_transaction_heading">ADD NEW TRANSACTION</string>
    <string name="add_new_game">ADD NEW GAME</string>
    <string name="add_employee_salary">ADD EMPLOYEE SALARY</string>
    <string name="add_expense_type">ADD EXPENSE TYPE</string>
    <string name="assign_user_role">ASSIGN USER ROLE</string>
    <string name="assign_user_id">ASSIGN USER ID</string>
    <string name="add_new_live_updates">ADD NEW LIVE UPDATES</string>
    <string name="common_notif_msg">Your Common App Notification has been Changed....</string>
    <string name="common_notif_msg_note">If you Turn Off App Notification, you won\'t receive any notification updates. Please turn on the facility to get instant notification.</string>
    <string name="chat_notif_msg">Your Chat Notification Settings has been updated...</string>
    <string name="date_time">Select Date and Time</string>
    <string name="confirm_time">Confirm</string>
    <string name="trans_msg">No Transactions to Display.</string>
    <string name="select_friend">Select atleast 1 friend</string>
    <string name="select_game">Select a game type</string>
    <string name="select_time">Select time</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="no_resp">No Response</string>
    <string name="okButton">Ok</string>
    <string name="already_frnd">%1$s is already your friend</string>
    <string name="req_to_own_num">You cannot send request to same login number</string>
    <string name="edit_own_role">You cannot change your own role</string>
    <string name="event_details">Event Details</string>
    <string name="service_details">Service Details</string>
    <string name="camera">Camera</string>
    <string name="select_media">Select Media</string>
    <string name="live_update_type">Select Type</string>
    <string name="cur_sal">Current Salary :&#160;</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="home">Home</string>
    <string name="my_friends">Friends</string>
    <string name="locate_us">Locate Us</string>
    <string name="transactions">Transactions</string>
    <string name="services">Services</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">We Exist @</string>
    <string name="edit_event">Add Event</string>
    <string name="edit_service">Add Service</string>
    <string name="edit_live_update">Add Live Update</string>
    <string name="edit_game_type">Add New Game</string>
    <string name="admin_assign_role">Assign Role</string>
    <string name="admin_assign_id">Assign Id</string>
    <string name="add_exp_type">Add Expense Type</string>
    <string name="add_emp_sal">Add Employee Salary</string>
    <string name="user_trans">User Transaction</string>
    <string name="sal_trans">Salary Transaction</string>
    <string name="exp_trans">Club Expenses</string>
    <string name="sal_list">Salary Details</string>
    <string name="exp_list">Expense Details</string>
    <string name="amount">Amount</string>
    <string name="exp_type">Expense Type</string>
    <string name="new_exp_type">New Expense Type</string>
    <string name="about_topic">ROCKETS POKER ROOM</string>
    <string name="about_para1">Rockets poker room is India’s largest poker room that offers fulltime
high grade poker action to quench
any and all poker desires that you might have. Get your poker face on and barge into our adrenaline
pumping card rooms;which also happen to be the most colossal and active in the country; to play the
belle of poker Texas No limit hold’em/Pot limit omaha. We have sparkling deepstack tables with a wide
array and personalities of players.</string>
    <string name="about_para2">We offer some of the biggest poker room games in the country; right in the bosom of bangalore; with well
trained dealers to cater to all of your card’y’ needs and queries. Choose the table which comforts your
bankroll and playing style. We are open all days of the week, so be ready for some heart racing poker
action whenever you decide to drop by. We ensure you the most deeply rewarding and premium
tournaments weekly althroughout the year for players of all stack sizes. Irrespective of the depth of your
pocket be sure to find yourself a welcoming spot at our action heavy board.</string>
    <string name="about_para3">See you at the tables!</string>
</resources>