<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/admin"
            android:title="@string/admin">

            <menu>

        <group android:checkableBehavior="single">
                <item
                    android:id="@+id/role_assign"
                    android:icon="@mipmap/ic_assign_role_admin"
                    android:title="@string/admin_assign_role" />
                <item
                    android:id="@+id/id_assign"
                    android:icon="@mipmap/ic_assign_id"
                    android:title="@string/admin_assign_id" />
                <item
                    android:id="@+id/add_exp_type"
                    android:icon="@mipmap/ic_id"
                    android:title="@string/add_exp_type" />
                <item

                    android:id="@+id/add_emp_sal"
                    android:icon="@mipmap/ic_currency"
                    android:title="@string/add_emp_sal" />
    </group>
        </menu>
        </item>

        <item
            android:id="@+id/cashier"
            android:title="@string/cashier">

            <menu>

        <group android:checkableBehavior="single">
                <item
                    android:id="@+id/user_transactions"
                    android:icon="@mipmap/ic_assign_role_admin"
                    android:title="@string/user_trans" />
                <item
                    android:id="@+id/salary_transactions"
                    android:icon="@mipmap/ic_currency"
                    android:title="@string/sal_trans" />
                <item
                    android:id="@+id/exp_transactions"
                    android:icon="@mipmap/ic_assign_id"
                    android:title="@string/exp_trans" />
                <item
                    android:id="@+id/salary_list"
                    android:icon="@mipmap/ic_transactions"
                    android:title="@string/sal_list" />
                <item
                    android:id="@+id/exp_list"
                    android:icon="@mipmap/ic_id"
                    android:title="@string/exp_list" />
    </group>
        </menu>
        </item>

        <item
            android:id="@+id/editor"
            android:title="@string/editor">

            <menu>

        <group android:checkableBehavior="single">
                <item
                    android:id="@+id/edit_events"
                    android:icon="@mipmap/ic_assign_id"
                    android:title="@string/edit_event" />
                <item
                    android:id="@+id/edit_services"
                    android:icon="@mipmap/ic_services"
                    android:title="@string/edit_service" />
                <item
                    android:id="@+id/edit_live_update"
                    android:icon="@mipmap/ic_live_update"
                    android:title="@string/edit_live_update" />
                <item
                    android:id="@+id/edit_game_type"
                    android:icon="@mipmap/ic_assign_role"
                    android:title="@string/edit_game_type" />
    </group>
        </menu>
        </item>


    <group android:checkableBehavior="single"
        android:id="@+id/user_group">

        <item
            android:id="@+id/my_home"
            android:icon="@mipmap/ic_home_black"
            android:title="@string/home" />
        <item
            android:id="@+id/my_friends"
            android:icon="@mipmap/ic_people_black"
            android:title="@string/my_friends" />
        <item
            android:id="@+id/location"
            android:icon="@mipmap/ic_locate_us"
            android:title="@string/locate_us" />
        <item
            android:id="@+id/transactions"
            android:icon="@mipmap/ic_transactions"
            android:title="@string/transactions" />
        <item
            android:id="@+id/services"
            android:icon="@mipmap/ic_services"
            android:title="@string/services" />
        <item
            android:id="@+id/settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/settings" />
    </group>


        <item
            android:id="@+id/appName"
            android:title="@string/app_name">
            <menu>
                <group android:checkableBehavior="single"
                    android:id="@+id/common_group">
                    <item
                        android:id="@+id/about_us"
                        android:icon="@mipmap/ic_about_us"
                        android:title="@string/about_us" />
                    <item
                        android:id="@+id/contact_us"
                        android:icon="@mipmap/ic_contact_us"
                        android:title="@string/contact_us" />
                </group>
            </menu>
        </item>

    </group>
</menu>
