<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_exp_type"
        android:textSize="15sp" />

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/curExpType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exp_type"
        android:textColorHint="#05ab9a"
        app:met_floatingLabel="normal" />

    <EditText
        android:id="@+id/newExpType"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:hint="@string/new_exp_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/err_msg"
        android:visibility="invisible"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save"
            android:text="@string/save"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_clear"
            android:text="@string/btn_clear1"/>

    </LinearLayout>

</LinearLayout>