<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:layout_margin="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/updateType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/live_update_type"
        android:textColorHint="#05ab9a"
        app:met_floatingLabel="normal" />

    <EditText
        android:id="@+id/updateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/update_header"/>

    <EditText
        android:id="@+id/updateText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/update_text"/>

    <EditText
        android:id="@+id/updateText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/update_text"/>

    <EditText
        android:id="@+id/updateText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/update_text"/>

    <EditText
        android:id="@+id/updateComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:hint="@string/update_comments"/>


    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

        <Button
            android:id="@+id/clearBtn"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear1"/>
    </LinearLayout>

</LinearLayout>