<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_multicolor"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="rocket.club.com.rocketpoker.AboutActivity"
    tools:showIn="@layout/activity_about">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_topic"
            android:paddingTop="20dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_para1"
            android:paddingTop="15dp"
            android:textSize="14sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_para2"
            android:paddingTop="15dp"
            android:textSize="14sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_para3"
            android:paddingTop="15dp"
            android:textSize="14sp"
            />
    </LinearLayout>
</LinearLayout>
